--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -51,14 +51,14 @@
 
         </LinearLayout>
 
-        <com.androidplot.xy.XYPlot
-            android:id="@+id/sensorDataPlot"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_marginLeft="10px"
-            android:layout_marginRight="10px"
-            android:layout_marginTop="10px"
-            android:layout_weight="0.34" />
+<!--         <com.androidplot.xy.XYPlot -->
+<!--             android:id="@+id/sensorDataPlot" -->
+<!--             android:layout_width="fill_parent" -->
+<!--             android:layout_height="fill_parent" -->
+<!--             android:layout_marginLeft="10px" -->
+<!--             android:layout_marginRight="10px" -->
+<!--             android:layout_marginTop="10px" -->
+<!--             android:layout_weight="0.34" /> -->
         
     </LinearLayout>
 
