--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,6 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
+        
 
     <LinearLayout
         android:id="@+id/linearLayout1"
@@ -50,16 +51,17 @@
                 android:text="Stop" />
 
         </LinearLayout>
-
-<!--         <com.androidplot.xy.XYPlot -->
-<!--             android:id="@+id/sensorDataPlot" -->
-<!--             android:layout_width="fill_parent" -->
-<!--             android:layout_height="fill_parent" -->
-<!--             android:layout_marginLeft="10px" -->
-<!--             android:layout_marginRight="10px" -->
-<!--             android:layout_marginTop="10px" -->
-<!--             android:layout_weight="0.34" /> -->
-        
+<com.androidplot.xy.XYPlot
+        android:id="@+id/sensorDataPlot"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_marginLeft="10px"
+        android:layout_marginRight="10px"
+        android:layout_marginTop="10px"
+        android:layout_weight="0.34" 
+        title="History"/>        
     </LinearLayout>
+
+
 
 </LinearLayout>
